--- a/env.sample
+++ b/env.sample
@@ -1,3 +1,4 @@
 NUXT_PUBLIC_API_URL = http://localhost:8088
-# NUXT_PUBLIC_GAMEP_PASS_API_URL = https://api.accounts.gamania.com
-NUXT_PUBLIC_GAMEP_PASS_API_URL = https://api.stg.gama.beango.com
+NUXT_PUBLIC_APP_URL = http://localhost:3000
+NUXT_PUBLIC_IS_PRE_MODE = 1
+NUXT_PUBLIC_IS_STAGE = 1
