--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
+# 後端 API
 NUXT_PUBLIC_API_URL = http://localhost:8088
+
+# 網站 URL
 NUXT_PUBLIC_APP_URL = http://localhost:3000
+
+# 是否為預熱頁
 NUXT_PUBLIC_IS_PRE_MODE = 1
+
+# 橘子相關 API 是否打到測試版
 NUXT_PUBLIC_IS_STAGE = 1
