--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-# 後端 API
+# 後端資料 API
 NUXT_PUBLIC_API_URL = http://localhost:8088
 
-# 網站 URL
+# 網站正式對外 URL
 NUXT_PUBLIC_APP_URL = http://localhost:3000
 
 # 橘子相關 API 是否打到測試版
