--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
+# base
+NUXT_APP_BASE_URL = /atomboyz/
+
 # 後端資料 API
 NUXT_PUBLIC_API_URL = http://localhost:8088
 
 # 網站正式對外 URL
-NUXT_PUBLIC_APP_URL = http://localhost:3000
+NUXT_PUBLIC_APP_URL = http://localhost:3000/atomboyz
 
 # 橘子相關 API 是否打到測試版
 NUXT_PUBLIC_IS_STAGE = 1
