fix: base path prefix

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 # base
 NUXT_APP_BASE_URL = /atomboyz/
 
-# 後端資料 API
-NUXT_PUBLIC_API_URL = http://localhost:8088
+# 後端資料 API，結尾不帶斜線
+NUXT_PUBLIC_API_URL = https://example.com
 
-# 網站正式對外 URL
-NUXT_PUBLIC_APP_URL = http://localhost:3000/atomboyz
+# 網站正式對外 URL，結尾不帶斜線
+NUXT_PUBLIC_APP_URL = https://example.com/atomboyz
 
 # 橘子相關 API 是否打到測試版
 NUXT_PUBLIC_IS_STAGE = 1
