fix: move pre mode time to config

--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,8 @@ NUXT_PUBLIC_API_URL = https://example.com
 # 網站正式對外 URL，結尾不帶斜線
 NUXT_PUBLIC_APP_URL = https://example.com/atomboyz
 
-# 橘子相關 API 是否打到測試版
+# 橘子相關 API 是否打到 stg 版
 NUXT_PUBLIC_IS_STAGE = 1
+
+# 預熱頁結束時間
+NUXT_PUBLIC_PRE_MODE_END_AT = 2024-06-11-12-00
