--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ NUXT_APP_BASE_URL = /atomboyz/
 # 後端資料 API，結尾不帶斜線
 NUXT_PUBLIC_API_URL = https://example.com
 
+# 後端登入 URL，結尾不帶斜線
+NUXT_PUBLIC_LOGIN_URL = http://localhost:8088/gamapass_login
+
 # 網站正式對外 URL，結尾不帶斜線
 NUXT_PUBLIC_APP_URL = https://example.com/atomboyz
 
