--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.0",
     "lucide-vue-next": "^0.363.0",
     "nuxt": "^3.11.1",
+    "query-string": "^9.0.0",
     "radix-vue": "^1.6.1",
     "swiper": "^11.1.1",
     "tailwind-merge": "^2.3.0",
