--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "tailwindcss-animate": "^1.0.7",
     "vanns-common-modules": "https://github.com/vann-at-cpcp-dot-tw/vanns-common-modules.git",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue3-touch-events": "^4.1.8"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^12.0.0",
